# MCP-Apps

./: .gitignore  LINKEDIN_ARTICLE.md  README.md
.claude/: settings.local.json
flight-tracker-agent/: README.md  m365agents.yml
flight-tracker-agent/appPackage/: ai-plugin.json  declarativeAgent.json  instruction.txt  manifest.json  mcp-tools.json
flight-tracker-agent/env/: .env.dev
flight-tracker-mcp/: .env  .env.example  .gitignore  FLIGHT_TRACKER_MCP_GUIDE.md  pyproject.toml
flight-tracker-mcp/flight_tracker_mcp/: server.py
flight-tracker-mcp/flight_tracker_mcp/tests/: widget_test.html
flight-tracker-mcp/flight_tracker_mcp/web/: widget.html
