[project]
name = "flight-tracker-mcp"
version = "0.1.0"
description = "Flight tracker MCP server using OpenSky API"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.1.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "uvicorn>=0.29",
    "starlette>=0.37",
]

[project.scripts]
flight-tracker-mcp = "flight_tracker_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flight_tracker_mcp"]
